# nnj

./: .buildinfo  README.md  UNet.ipynb  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/apis/: abstract_diagonal_jacobian.doctree  abstract_jacobian.doctree  linear.doctree  maxpool.doctree  relu.doctree  sequential.doctree  sigmoid.doctree  sinusoidal.doctree  softplus.doctree  tanh.doctree  truncexp.doctree  upsample.doctree
.doctrees/nnj/: index.doctree
.doctrees/why/: index.doctree
.github/workflows/: documentation.yaml  flake8.yml  isort.yml  tests.yml
_sources/apis/: abstract_jacobian.rst.txt  linear.rst.txt  maxpool.rst.txt  relu.rst.txt  softplus.rst.txt  tanh.rst.txt  upsample.rst.txt
apis/: abstract_diagonal_jacobian.html  abstract_jacobian.html  linear.html  maxpool.html  relu.html  sequential.html  sigmoid.html  sinusoidal.html  softplus.html  tanh.html  truncexp.html  upsample.html
benchmarks/: models.py  timer.py
benchmarks/ggn/: backpack.py  nnj.py
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/apis/: abstract_diagonal_jacobian.rst  abstract_jacobian.rst  maxpool.rst  sequential.rst  sigmoid.rst  sinusoidal.rst  truncexp.rst  upsample.rst
docs/source/nnj/: index.rst  sequential.rst
docs/source/why/: index.rst
nnj/: __init__.py  abstract_diagonal_jacobian.py  abstract_jacobian.py  conv2d.py  flatten.py  index.html  l2norm.py  linear.py  log_likelihoods.py  maxpool2d.py  relu.py  reshape.py  sequential.py  sigmoid.py  sinusoidal.py  skipconnection.py  softplus.py  tanh.py  truncexp.py  upsample.py  utils.py
tests/: jacobian_products.py  jacobians.py  linear.py
why/: index.html
