[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nnj"
version = "0.0.0"
description = "nnj package"
requires-python = ">=3.7.3"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
]

[tool.setuptools.packages.find]
include = ["nnj*"]

[tool.black]
# https://github.com/psf/black
line-length = 110
target-version = ["py38"]
exclude = "(.eggs|.git|.hg|.mypy_cache|.nox|.tox|.venv|.svn|_build|buck-out|build|dist|docs)"

[tool.isort]
profile = "black"
line_length = 110
force_sort_within_sections = "False"
order_by_type = "False"